# interpreter

./: .gitignore  Cargo.toml  README.md
src/: interpreter.rs  lib.rs  stack.rs
